k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mk3-ingress
spec:
  rules:
    - host: mk3.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mk3-api
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mk3-web
                port:
                  number: 3000
